--- a/trunk/ResumeWebSite/Resume/index.html
+++ b/trunk/ResumeWebSite/Resume/index.html
@@ -54,10 +54,10 @@
 				</div>
 				<div class="span8">
 					<p>
-						<span class="label label-info">Innovative software engineer</span> offering six years of experience in Web development and GIS involving full software development lifecycle – from concept through delivery of next-generation applications and customizable solutions.
+						<span class="label label-info">Innovative software engineer</span> offering eight plus years of experience in Web development and GIS involving full software development lifecycle – from concept through delivery of next-generation applications and customizable solutions.
 					</p>
 					<p>
-						<span class="label label-info">Expert in advanced development methodologies</span>, tools and processes. Strong OOP and Design Patterns skills. Deep understanding of OOAD and Agile methods.
+						<span class="label label-info">Expert in advanced development methodologies</span>, tools and processes. Strong OOP and Design Patterns skills. Deep understanding of OOAD, Agile methods and TDD.
 					</p>
 					<p>
 						<span class="label label-info">Creative problem solver</span> and experience in designing software work-flows for complex Geo-spatial applications on web, desktop and mobile platforms.
@@ -76,30 +76,81 @@
 		</div>
 		<div class="span5">
 			<ul class="unstyled">
-				<li class="icon-ok"><span class="label label-info">Front End</span> JavaScript, jQuery, AngularJS, HTML5, JSON, RequireJS</li>
-				<li class="icon-ok"><span class="label label-info">Web Frameworks</span> Node.js, Ruby on Rails, Spring, Struts, Hibernate</li>
-				<li class="icon-ok"><span class="label label-info">Databases</span> MongoDB, MySQL, PostgreSQL, MS SQL Server 2008 </li>
-				<li class="icon-ok"><span class="label label-info">Servers</span> Apache2, Tomcat, JBOSS</li>
-				<li class="icon-ok"><span class="label label-info">Mobile</span> jQuery Mobile, Sencha Touch 2, iOS</li>
-				<li class="icon-ok"><span class="label label-info">Languages</span> Java, Ruby, Python</li>
-				<li class="icon-ok"><span class="label label-info">Process Tools</span> ANT, Jenkins CI, CruiseControl.rb</li>
+                <li class="icon-ok"><span class="label label-info">Front End</span> HTML5, CSS3, JavaScript, Angular, D3</li>
+				<li class="icon-ok"><span class="label label-info">Front End Tools</span> Yeoman, Grunt, Bower</li>
+                <li class="icon-ok"><span class="label label-info">Web Development</span> Ruby on Rails, Node.js, Spring</li>
+				<li class="icon-ok"><span class="label label-info">Dev Ops</span> Capistrano, Puppet, AWS Stack, Heroku</li>
+				<li class="icon-ok"><span class="label label-info">Databases</span> MongoDB, MySQL, PostgreSQL, SQL Server</li>
+				<li class="icon-ok"><span class="label label-info">Servers</span> Apache2, Phusion Passenger, Tomcat</li>
+				<li class="icon-ok"><span class="label label-info">Mobile</span> iOS, RubyMotion</li>
+				<li class="icon-ok"><span class="label label-info">Languages</span> Ruby, JavaScript, Python, Java, ObjectiveC</li>
+				<li class="icon-ok"><span class="label label-info">Process Tools</span> JIRA, Jenkins, Bamboo</li>
 			</ul>
 		</div>
 		<div class="span5">
 			<ul class="unstyled">
-				<li class="icon-ok"><span class="label label-info">GIS Servers</span> GeoServer, ArcGIS Server, LocationGuru SmartGeo</li>
+				<li class="icon-ok"><span class="label label-info">GIS Servers</span> GeoServer, ArcGIS Server</li>
 				<li class="icon-ok"><span class="label label-info">Map API</span> OpenLayers, Leaflet, TileMill, Google Maps, BingMaps</li>
-				<li class="icon-ok"><span class="label label-info">GIS Services</span> ArcGIS 9+, WMS, WFS, GeoJSON, GML, KML, GeoRSS</li>
-				<li class="icon-ok"><span class="label label-info">GIS Tools</span> ArcGIS, FME, GDAL, LibLAS, GeoTools, Java Topology Suite</li>
+				<li class="icon-ok"><span class="label label-info">ESRI</span> ArcGIS, ArcGIS Server Rest, Image Services</li>
+                <li class="icon-ok"><span class="label label-info">OGC</span> WMS, WFS, GeoJSON, GML, KML, GeoRSS. TopoJSON, WMTS</li>
+				<li class="icon-ok"><span class="label label-info">GIS Tools</span> ArcGIS, FME, GDAL, LibLAS, Java Topology Suite</li>
 				<li class="icon-ok"><span class="label label-info">GIS Data</span> LiDAR, GeoTIFF, LAS, ShapeFile, GDF</li>
-				<li class="icon-ok"><span class="label label-info">Carto Databases</span> PostgreSQL/PostGIS , MS SQL server 2008 Spatial</li>
-				<li class="icon-ok"><span class="label label-info">Data Formats</span> Tele Atlas, NavTeq, Lead Dog, Map My India</li>
+				<li class="icon-ok"><span class="label label-info">Carto Databases</span> PostgreSQL/PostGIS , SQL Server Spatial</li>
 			</ul>
 		</div>
 	</div>
 	<hr/>
 	<!-- /technical skills -->
 
+    <!-- work experience -->
+    <div class="row" id="work-experience">
+        <div class="span2">
+            <h2><span>&sect;</span> Work Experience (8+ years)</h2>
+        </div>
+        <div class="span2">
+            <h3>NOAA'S Office For Coastal Management</h3>
+            <p>
+                <small>
+                <i class="icon-star-empty"></i> Sr. GIS Developer<br/>
+                <i class="icon-calendar"></i>&nbsp;&nbsp;Jun 2012 <em>to</em> Current </small>
+            </p>
+        </div>
+        <div class="span2">
+            <h3>University Of Houston</h3>
+            <p>
+                <small>
+                <i class="icon-star-empty"></i> GIS Developer<br/>
+                <i class="icon-calendar"></i>&nbsp;&nbsp;Aug 2009 <em>to</em> Jun 2012 </small>
+            </p>
+        </div>
+        <div class="span2">
+            <h3>LocationGuru</h3>
+            <p>
+                <small>
+                <i class="icon-star-empty"></i> Software Developer<br/>
+                <i class="icon-calendar"></i>&nbsp;&nbsp;Aug 2007 <em>to</em> Jul 2009 </small>
+            </p>
+        </div>
+        <div class="span2">
+            <h3>GlobalLogic</h3>
+            <p>
+                <small>
+                <i class="icon-star-empty"></i> Student Intern<br/>
+                <i class="icon-calendar"></i>&nbsp;&nbsp;Sep 2006 <em>to</em> Apr 2007 </small>
+            </p>
+        </div>
+        <!-- <div class="span2">
+
+            <h3>Company 5</h3>
+            <p>
+                <small>
+                <i class="icon-star-empty"></i> Position<br/>
+                <i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
+            </p>
+        </div> -->
+    </div>
+    <!-- /work experience -->
+    <hr/>
 	<!-- education -->
 	<div class="row" id="education">
 		<div class="span2">
@@ -134,59 +185,8 @@
 			</table>
 		</div>
 	</div>
-	<hr/>
 	<!-- /education -->
-
-	<!-- work experience -->
-	<div class="row" id="work-experience">
-		<div class="span2">
-			<h2><span>&sect;</span> Work Experience</h2>
-		</div>
-		<div class="span2">
-			<h3>NOAA Coastal Services Center</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> GIS Developer<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Jun 2012 <em>to</em> Current </small>
-			</p>
-		</div>
-		<div class="span2">
-			<h3>University Of Houston</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> GIS Developer<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Aug 2009 <em>to</em> Jun 2012 </small>
-			</p>
-		</div>
-		<div class="span2">
-			<h3>LocationGuru</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> Software Developer<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Aug 2007 <em>to</em> Jul 2009 </small>
-			</p>
-		</div>
-		<div class="span2">
-			<h3>GlobalLogic</h3>
-			<p>
-				<small>
-				<i class="icon-star-empty"></i> Student Intern<br/>
-				<i class="icon-calendar"></i>&nbsp;&nbsp;Sep 2006 <em>to</em> Apr 2007 </small>
-			</p>
-		</div>
-		<!-- <div class="span2">
-
-            <h3>Company 5</h3>
-            <p>
-                <small>
-                <i class="icon-star-empty"></i> Position<br/>
-                <i class="icon-calendar"></i>&nbsp;&nbsp;Mon YYYY <em>to</em> Mon YYYY </small>
-            </p>
-        </div> -->
-
-	</div>
 	<hr/>
-	<!-- /work experience -->
 
     <!-- projects -->
     <div class="row" id="projects">
@@ -194,7 +194,33 @@
             <h2><span>&sect;</span> Projects</h2>
         </div>
         <div class="span10">
-             <!-- project -->
+            <!-- project CCAP -->
+            <div class="row">
+                <div class="span6"><h3>C-CAP Land Cover Atlas</h3></div>
+                <div class="span4">
+                    <!-- <div class="float-right"> -->
+                        <i class="icon-calendar"></i>&nbsp;&nbsp;Jun 2012 <em>to</em> Oct 2014 </small>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<i class="icon-map-marker"></i>&nbsp;&nbsp;NOAA, Charleston
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="span10">
+                    <p>
+                        <a href="http://coast.noaa.gov/ccapatlas" target="_blank">Land Cover Atlas</a> is an online map viewer that provides user-friendly access to regional land cover and land cover change information developed through <a href="http://coast.noaa.gov/digitalcoast/data/ccapregional" target="_blank">NOAA’s Coastal Change Analysis Program (C-CAP)</a>. The tool summarizes general change trends (such as forest losses or new development) and can highlight specific changes of interest.
+                        It uses huge datasets exposed using a combination of ArcGIS Server, JSON Web Services and WMS server to display statistics and change rasters on interactive OpenLayers map quickly and efficiently on a very user-friendly interface.
+                    </p>
+
+                    <p>
+
+                        <span class="label label-info">Key Features:</span> Interactive Web Map, OpenLayers, HTML5, CSS3, JavaScript, jQuery, HighCharts, Grunt, jUnit,  Web Services, ArcGIS Rest, WMS, Tile Cache, JSON
+                    </p>
+                </div>
+            </div>
+            <hr/>
+            <!-- /project -->
+
+            <!-- project -->
             <div class="row">
                 <div class="span6"><h3>Satellite Imagery to Assess Rural Electrification</h3></div>
                 <div class="span4">
@@ -207,15 +233,15 @@
             <div class="row">
                 <div class="span10">
                     <p>
-                        Developed this project as a part of <span class="label label-info"><a href="http://2012.spaceappschallenge.org/home/">NASA International Space Apps Challenge 2012</a></span>. This was a 24 hour Hackthon, in which over 2000 people participated worldwide. 
+                        Developed this project as a part of <span class="label label-info"><a href="http://2012.spaceappschallenge.org/home/">NASA International Space Apps Challenge 2012</a></span>. This was a 24 hour Hackthon, in which over 2000 people participated worldwide.
                         Our team won the <span class="label label-info">"Global Impact Award"</span> for the <a href="http://2012.spaceappschallenge.org/challenge/satellite-imagery-assess-rural-electrification/">Satellite Imagery to Assess Rural Electrification</a> challenge.<br>
                     </p>
-                    
-                    <p>    
+
+                    <p>
                         Solution was <span class="label label-info">World at Night</span> which is a web based mapping tool that shows who on planet earth has access to light. It allows users to overlay Night Time Satellite Imagery data with world population and other data to which areas still don't have access to electricity.
                         We also provided tools to calculate which kind of source of electricity (solar, hydro, wind, or traditional) is likely to be most feasible to electrify that region.
                     </p>
-                    
+
                     <p>
 
                         <span class="label label-info">Key Features:</span> Interactive Web Map, OpenLayers, Geoserver, Geo-TIFF, ArcGIS, Ruby on Rails, GIS Analysis
@@ -428,7 +454,7 @@
             </p>
         </div>
 	</div>
-	
+
 	<!-- /sample work -->
 
 	<!-- footer -->
